@@ -57,6 +57,7 @@ NEXT UNRELEASED
 - Expose glossterm in PO files to support sortas attribute. BZ #1030591
 - Add report action to print readability statistics. BZ #1031364
 - Change comment in syntax highlight to light grey. BZ #1030718
+- Document use of "sortas" for indexes and glossaries in PUG
 
 3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #995896
